# search-with-embeddings

./: README.md  main.ipynb  pyproject.toml
llmzoomcamp/: .gitignore
llmzoomcamp/01-intro/: first_class.ipynb  homework_1.ipynb
