[tool.poetry]
name = "llmzoomcamp"
version = "0.1.0"
description = ""
authors = ["Andres Montenegro <26306411+andresckamilo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
jupyterlab = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
